examples/valid/program28.c
int square(int x) {
    return x * x;
}

int main(void) {
    int n;
    int result;
    n = 5;
    result = square(n);
    return result;
}

