examples/invalid/program21.c
int f(void) {
    return 5;
}

int main(void) {
    int x;
    x = f(10);
    return x;
}

